--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <a href="#" class="logo"><img src="images/PLASTICATS.png"></a>
     <a href="https://nl.wikipedia.org/wiki/Plasticsoep" class="info"><img src="images/info.png"></a>
-    <a href="#" class="start"><img src="images/START.png"></a>
+    <a href="menu.html" class="start"><img src="images/START.png"></a>
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
