--- a/Tutorial3.html
+++ b/Tutorial3.html
@@ -3,19 +3,16 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/styleTut.css" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/fullscreen.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <title></title>
 </head>
 <body>
+<a href="menu.html" class="home"><img src="images/home.png"></a>
+<a href="start.html" class="next"><img src="images/next.png"></a>
+<a href="Tutorial2.html" class="prev"><img src="images/prev.png"></a>
 
-    <a href="menu.html" class="logo"><img src="images/PLASTICATS.png"></a>
-    <a href="https://nl.wikipedia.org/wiki/Plasticsoep" class="info"><img src="images/info.png"></a>
-    <a href="menu.html" class="start"><img src="images/START.png"></a>
-
-    <!--<audio src="sound/song.mp3" autoplay loop ></audio>-->
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="js/loadPage.js"></script>
