--- a/menu.html
+++ b/menu.html
@@ -5,18 +5,23 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styleMenu.css" type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/fullscreen.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <title></title>
 </head>
 <body>
 
-<a href="" class="logo"><img src="images/PLASTICATS.png"></a>
+<a href="index.html" class="logo"><img src="images/PLASTICATS.png"></a>
 <a href="https://nl.wikipedia.org/wiki/Plasticsoep" class="info"><img src="images/info.png"></a>
-<a href="#" class="play"><img src="images/PLAY%20BUTTON.png"></a>
-<a href="#" class="lb"><img src="images/Leaderboards.png" </a>
-<a href="#" class="quit"><img src="images/quit%20home.png"></a>
-<a href="#" class="mute"><img src="images/mutebutton.png"> </a>
-<a href="#" class="unmute"><img src="images/speaker%20icon.png"></a>
+<a href="Tutorial1.html" class="play"><img src="images/PLAY%20BUTTON.png"></a>
+<a href="leaderboards.php" class="lb"><img src="images/Leaderboards.png" </a>
+<a href="done.php" class="quit"><img src="images/quit%20home.png"></a>
+
+
+<a href="" class="mute"><img src="images/mutebutton.png"> </a>
+<a href="" class="unmute"><img src="images/speaker%20icon.png"></a>
+
+<!--<audio src="sound/song.mp3" autoplay loop ></audio>-->
 
 </body>
 
